--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,10 @@
     <string name="change_email">Change Email </string>
     <string name="faq">FAQ</string>
 
-
+    <!-- Bottom App Bar Section-->
+    <string name="home">welcome</string>
+    <string name="chat">login</string>
+    <string name="bag">bag</string>
+    <string name="profile">profile</string>
 
 </resources>
