--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,16 @@
     <string name="welcome_carrousel_text_two_contentDescription">Illustration of a woman with brown hair tied in a ponytail, wearing a green shirt, gently holding a light brown tabby cat over her shoulder.</string>
     <string name="welcome_carrousel_text_three_contentDescription">Illustration of a man with light brown hair wearing an orange sweater, holding a white fluffy cat with a friendly expression.</string>
 
+    <!-- Homepage -->
+    <string name="location_desc">Location Icon</string>
+    <string name="track_your_location">Track your Location</string>
+    <string name="desc">Automatically selects your current location</string>
+    <string name="location_placeholder">Search...</string>
+    <string name="location">Location</string>
+    <string name="category">Category</string>
+    <string name="best_seller">Best Seller</string>
+    <string name="view_all">View All</string>
+    <string name="arrow_down">Arrow Down</string>
+
+
 </resources>
