Remove unused MaterialTheme imports and update string resource
- Removed `MaterialTheme` import from `TextLink.kt` and `Banner.kt` as it was not being used.
- Corrected the ellipsis in the `location_placeholder` string resource in `strings.xml`.
- Replaced `Divider` with `HorizontalDivider` in `Location.kt` and removed an unused `width` import.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="location_desc">Location Icon</string>
     <string name="track_your_location">Track your Location</string>
     <string name="desc">Automatically selects your current location</string>
-    <string name="location_placeholder">Search...</string>
+    <string name="location_placeholder">Search…</string>
     <string name="location">Location</string>
     <string name="category">Category</string>
     <string name="best_seller">Best Seller</string>
