--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
     <string name="app_name">TP3-ORT-2025-Parcial</string>
+    <string name="settings_title_account">Account</string>
+    <string name="settings_title_help">Help</string>
+    <string name="settings_title_security">Security</string>
+    <string name="settings_title_social">Social</string>
+    <string name="settings_title_store">Store</string>
+    <string name="log_out">Log Out</string>
     <!--Definir name y URL de la API-->
     <!--<string name="quotes_api_base_url">https://api.api-ninjas.com/</string>-->
 </resources>
