--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="settings_title_social">Social</string>
     <string name="settings_title_store">Store</string>
     <string name="log_out">Log Out</string>
+    <string name="privacy_info_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum sapien sodales mi sagittis hendrerit. Curabitur ut lectus nec orci cursus rhoncus. Donec a ultrices risus. Mauris ut erat ut urna rhoncus facilisis a eu neque. Ut iaculis viverra laoreet. In interdum, augue non auctor pharetra, felis ante gravida ante, quis mattis quam eros non quam. Vivamus scelerisque ante nec dapibus convallis. Vestibulum quis scelerisque leo. Vestibulum quis porttitor tellus, non finibus nibh. Quisque ut tempor nulla, sed consectetur tortor. Mauris volutpat viverra arcu non laoreet. Duis eu arcu nunc. Pellentesque ultricies facilisis faucibus. Duis magna sem, ultricies sed scelerisque efficitur, hendrerit at arcu.</string>
+    <string name="privacy_title_terms_of_use">Term of Use</string>
+    <string name="privacy_title_petapp_service">PetApp Service</string>
     <!--Definir name y URL de la API-->
     <!--<string name="quotes_api_base_url">https://api.api-ninjas.com/</string>-->
 </resources>
