- Add API base URL string resource - Update Java and Kotlin versions - Renamed files: `IServiceName.kt` to `IServiceProduct.kt`. - Deleted NameRetrofit.kt - Create `Product.kt` model and `ProductAPI.kt` for API response. - Create ProductPrueba screen - Update `MainViewModel.kt` to load products from API. - Update `ProductCard.kt` to use Product model. - Update `ProductGrid.kt` to accept a list of Products. - Modify `MainActivity.kt` to load products on creation and add a new route. - Comment out interceptor in `MyInterceptor.kt`. - Create service files: IProductAPI.kt, GetServiceProduct.kt, IServiceProduct.kt - Display product list using ProductGrid component in ProductPrueba.kt - Create Retrofit client for Product API - Add ProductRetrofit class to handle API calls - Implement getProductsByCategoryGroceries method to fetch and filter products - Modify RetrofitModule to provide Product API client - Add ProductResponse data class for API response parsing - Update Screens to include a ProductPrueba screen for testing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">TP3-ORT-2025-Parcial</string>
+    <string name="products_api_base_url">https://dummyjson.com/</string>
 
     <!-- Welcome Screen-->
     <string name="welcome_title">Meet your\nanimal needs\nhere</string>
