--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="best_seller">Best Seller</string>
     <string name="view_all">View All</string>
     <string name="arrow_down">Arrow Down</string>
+    <string name="activity">Activity</string>
+    <string name="seller_mode">Seller Mode</string>
 
     <!-- Top App Bar Tittles-->
     <string name="notification">Notification</string>
@@ -37,7 +39,7 @@
     <string name="go_back_icon_desc">Go Back Icon</string>
 
     <!-- Bottom App Bar Section-->
-    <string name="home">welcome</string>
+    <string name="home">home</string>
     <string name="chat">login</string>
     <string name="bag">bag</string>
     <string name="profile">profile</string>
