Fix ProfileUser and ProfileSeller padding - Updated navigation:     - Added `ProfileUser` and `ProfileSeller` to the list of no top bar routes.     - Updated the string resource for profile to "profileUser".     - Added `ProfileSeller` and various settings-related screens to the list of no bottom bar routes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="home">welcome</string>
     <string name="chat">login</string>
     <string name="bag">bag</string>
-    <string name="profile">profile</string>
+    <string name="profileUser">profileUser</string>
 
     <string name="home_desc">Home</string>
     <string name="chat_desc">Chat bubble</string>
