- Implemented Search screen with recent searches and options - Added `Search` to navigation and excluded it from bottom bar - Made `ProductGrid` scrollable by setting a fixed height - Changed "Promo" to "Option" in `ButtonCarouselRow` - Adjusted `ProductCard` text styling - Minor style and layout adjustments in various components and screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="view_all">View All</string>
     <string name="arrow_down">Arrow Down</string>
     <string name="activity">Activity</string>
+    <string name="recent">Recent</string>
     <string name="seller_mode">Seller Mode</string>
 
     <!-- Top App Bar Tittles-->
