--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,7 +86,17 @@
     <!-- Payment-->
     <string name="payment_success_title">Payment\nSuccess!</string>
     <string name="payment_success_description">your order is being prepared by the shop, the courier will send it to your address</string>
+    <string name="save_button">Save</string>
     <string name="payment_success_button">Go Home</string>
-
+    <string name="checkout_button">Checkout</string>
+    <string name="paypal_radio_button">Paypal</string>
+    <string name="bank_transfer_radio_button">Bank Transfer</string>
+    <string name="choose_payment_method_title">Choose your Payment Method</string>
+    <string name="add_new_payment_title">Add New Payment</string>
+    <string name="payment_method_title">Payment Method</string>
+    <string name="card_number_title_button">Card Number</string>
+    <string name="card_name_title_button">Card Name</string>
+    <string name="expired_title_button">Expired</string>
+    <string name="cvv_title_button">CVV</string>
 
 </resources>
