Se modificaron las screens para que queden lo mas similar al figma. Se agregaron inputs nuevos para numeros de tarjeta de creditos, input de codigo de seguridad e input de expiration date, todos con formatos diferentes son por eso se separaron. TODO: El campo CVV se ve medio feo y el campo de Numero de tarjeta seria lindo separar los numeros cada 4 caracteres

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="get_started_button_text">Get Started</string>
     <string name="next_button_text">Next</string>
     <string name="reset_password_button_text">Reset Password</string>
+    <string name="required_field_text">Required Fields</string>
 
 
     <!-- Terms and Conditions-->
@@ -98,5 +99,6 @@
     <string name="card_name_title_button">Card Name</string>
     <string name="expired_title_button">Expired</string>
     <string name="cvv_title_button">CVV</string>
+    <string name="info_square_img">Info Square</string>
 
 </resources>
