--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,4 +101,7 @@
     <string name="cvv_title_button">CVV</string>
     <string name="info_square_img">Info Square</string>
 
+    <!-- DB -->
+    <string name="db_name">app_database</string>
+
 </resources>
