- Refactor navigation in Home and PaymentSuccess screens - Add navigation to Cart screen and "Add to cart" button - Add "Checkout" button text to strings.xml - Pass NavController to Cart composable in MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,5 +118,6 @@
     <string name="expired_title_button">Expired</string>
     <string name="cvv_title_button">CVV</string>
     <string name="info_square_img">Info Square</string>
+    <string name="checkout_button_text">Checkout</string>
 
 </resources>
