- Update button carousel selection logic - Add `Time` screen and navigate to it from bottom bar - Rename `Saved` button to `Settings` in `ProfileUser` screen - Add settings icon button to `ProfileSeller` - Enable vertical scrolling in `ProfileUserEdit` - Remove unused `NavigationReadMe.kt` - Add new vector assets for settings and time icons - Modify SettingsPage.kt:     - Add vertical scroll functionality     - Change navigation route for "Payment Method" to "addPaymentMethod"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,12 +49,12 @@
 
     <!-- Bottom App Bar Section-->
     <string name="home">home</string>
-    <string name="chat">login</string>
+    <string name="empty_time">time</string>
     <string name="bag">cart</string>
     <string name="profile">profileUser</string>
 
     <string name="home_desc">Home</string>
-    <string name="chat_desc">Chat bubble</string>
+    <string name="empty_desc">Time icon</string>
     <string name="bag_desc">Shopping bag</string>
     <string name="profile_desc">User profile</string>
     <string name="forgot_password_login_title">Forgot\nPassword</string>
